--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-    <div class="container"> 
+    <div class="w-100 d-flex"> 
         <img src="https://w0.peakpx.com/wallpaper/1013/916/HD-wallpaper-black-clover-asta-black-bull-black-clover-logo.jpg" alt="..." width="50" height="60">
       <a class="navbar-brand" href="#">Wishlist {{nama}}</a>
       </a>
